added system of passing the user from function to function
Created a variable which will be passed for saving the log status

--- a/hospital management/hospital management.vcxproj.filters
+++ b/hospital management/hospital management.vcxproj.filters
@@ -47,5 +47,8 @@
     <ClInclude Include="classes\accounts.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="menu\user\user.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
