--- a/hospital management/hospital management.vcxproj
+++ b/hospital management/hospital management.vcxproj
@@ -151,6 +151,7 @@
     <ClInclude Include="log\login.h" />
     <ClInclude Include="log\signup.h" />
     <ClInclude Include="menu\main_menu.h" />
+    <ClInclude Include="menu\user\user.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
