Added sign up page
Added sign up page, and solved problem with the  passing the User type variable. The problem was in #programa once connect

--- a/hospital management/hospital management.vcxproj.filters
+++ b/hospital management/hospital management.vcxproj.filters
@@ -50,5 +50,11 @@
     <ClInclude Include="menu\user\user.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="menu\doctor\doctor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="menu\admin\admin.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
