--- a/hospital management/hospital management.vcxproj
+++ b/hospital management/hospital management.vcxproj
@@ -150,6 +150,8 @@
     <ClInclude Include="log\log.h" />
     <ClInclude Include="log\login.h" />
     <ClInclude Include="log\signup.h" />
+    <ClInclude Include="menu\admin\admin.h" />
+    <ClInclude Include="menu\doctor\doctor.h" />
     <ClInclude Include="menu\main_menu.h" />
     <ClInclude Include="menu\user\user.h" />
   </ItemGroup>
