--- a/hospital management/hospital management.vcxproj.filters
+++ b/hospital management/hospital management.vcxproj.filters
@@ -56,7 +56,10 @@
     <ClInclude Include="menu\admin\admin.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="menu\admin\about.h">
+    <ClInclude Include="menu\admin\about_admin.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="menu\doctor\about_doctor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
