Doc menu complete
the menu is written, there is one more step is analyzing which doc is requesting

--- a/hospital management/hospital management.vcxproj.filters
+++ b/hospital management/hospital management.vcxproj.filters
@@ -62,5 +62,8 @@
     <ClInclude Include="menu\doctor\about_doctor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="menu\doctor\all_doc_booking.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
