--- a/hospital management/hospital management.vcxproj
+++ b/hospital management/hospital management.vcxproj
@@ -153,6 +153,7 @@
     <ClInclude Include="menu\admin\about_admin.h" />
     <ClInclude Include="menu\admin\admin.h" />
     <ClInclude Include="menu\doctor\about_doctor.h" />
+    <ClInclude Include="menu\doctor\all_doc_booking.h" />
     <ClInclude Include="menu\doctor\doctor.h" />
     <ClInclude Include="menu\main_menu.h" />
     <ClInclude Include="menu\user\user.h" />
