--- a/hospital management/hospital management.vcxproj.filters
+++ b/hospital management/hospital management.vcxproj.filters
@@ -65,5 +65,8 @@
     <ClInclude Include="menu\doctor\all_doc_booking.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="menu\admin\user_bookings.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
