Admin and Doc menu
Admin menu is finished and works correctly, also finished the doctor menu and works properly too.
The date for test bookings for particular day is 3302021

--- a/hospital management/hospital management.vcxproj.filters
+++ b/hospital management/hospital management.vcxproj.filters
@@ -68,5 +68,23 @@
     <ClInclude Include="menu\admin\user_bookings.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="menu\user\about_me.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="menu\admin\add_user.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="menu\user\active_bookings.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="menu\user\book.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="menu\user\cancel_booking.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="menu\admin\doc_bookings.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
