--- a/hospital management/hospital management.vcxproj
+++ b/hospital management/hospital management.vcxproj
@@ -151,12 +151,18 @@
     <ClInclude Include="log\login.h" />
     <ClInclude Include="log\signup.h" />
     <ClInclude Include="menu\admin\about_admin.h" />
+    <ClInclude Include="menu\admin\add_user.h" />
     <ClInclude Include="menu\admin\admin.h" />
+    <ClInclude Include="menu\admin\doc_bookings.h" />
     <ClInclude Include="menu\admin\user_bookings.h" />
     <ClInclude Include="menu\doctor\about_doctor.h" />
     <ClInclude Include="menu\doctor\all_doc_booking.h" />
     <ClInclude Include="menu\doctor\doctor.h" />
     <ClInclude Include="menu\main_menu.h" />
+    <ClInclude Include="menu\user\about_me.h" />
+    <ClInclude Include="menu\user\active_bookings.h" />
+    <ClInclude Include="menu\user\book.h" />
+    <ClInclude Include="menu\user\cancel_booking.h" />
     <ClInclude Include="menu\user\user.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
